--- a/palma/assets/css/styles.less
+++ b/palma/assets/css/styles.less
@@ -5,6 +5,12 @@
     padding: 0;
     margin: 0;
 }
+
+::selection {
+    color: #f3cdaa;
+    background: #68C4EB;
+}
+
 header {
     height: 77px;
     filter: drop-shadow(0px 4px 4px #68C4EB);
@@ -57,6 +63,20 @@ footer {
     justify-content: space-around;
     align-items: center;
 
+    .icon {
+        transition: filter 0.3s;
+    }
+    
+    .icon:hover {
+        filter: invert(68%) sepia(80%) saturate(469%) hue-rotate(167deg) brightness(99%) contrast(86%); 
+    }
+
+    .left, .right {
+        display:flex;
+        width: 30%;
+        justify-content: space-around;
+    }
+
     .main_btn {
         position: absolute;
         top: -50%;
@@ -68,6 +88,19 @@ footer {
         display: flex;
         align-items: center;
         justify-content: center;
+
+        a {
+            width:100%;
+            height:100%;
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+
+    .main_btn:hover {
+        background:#F3CDAA;
     }
 }
 
@@ -79,6 +112,16 @@ body {
     background-image: url('../images/background.png');
     background-size: cover;
     background-color: #b9e3e77a;
+}
+*{
+    &::-webkit-scrollbar{
+        width: 5px;  
+    }
+
+    &::-webkit-scrollbar-thumb{
+        background-color: rgba(128, 128, 128, 0.33);    
+        border-radius: 25px;       
+    }
 }
 
 h1 {
@@ -154,6 +197,16 @@ form input[type=email]::placeholder{
             flex-direction: column;
             justify-content: flex-end;
             padding-bottom: 35px;
+            @media (max-height:900px) {
+                img ~ h2 {
+                    text-shadow: 0 0 13px #355258f0;
+                }
+
+                img ~ h3 {
+                    text-shadow: 0 0 13px #355258f0;
+                    color: white;
+                }
+            }
         }
         h2 {
             font-style: normal;
@@ -164,6 +217,25 @@ form input[type=email]::placeholder{
         }
         h2,h3{
             z-index: 10;
+        }
+
+        @media (max-height:900px) {
+
+            h2{
+                font-size:27px;
+            }
+            h3 {
+                font-size:19px;
+            }
+        }
+
+        @media (max-height: 700px) {
+            h2{
+                font-size:25px;
+            }
+            h3 {
+                font-size:17px;
+            }
         }
         
         h3 {
